--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "practica1",
+  "name": "mandala-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,9 +11,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
+    "json-server": "^0.17.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -21,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch src/api/db.json --port 5000"
   },
   "eslintConfig": {
     "extends": [
